// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer should render 1`] = `
.c0 {
  display: block;
  height: 0;
  width: 0;
}

<body>
  <div>
    <div
      class="c0"
    />
  </div>
</body>
`;

exports[`Spacer should support w and h 1`] = `
.c0 {
  display: block;
  height: 10px;
  width: 10px;
}

<body>
  <div>
    <div
      class="c0"
    />
  </div>
</body>
`;

exports[`Spacer should work with inline mode 1`] = `
.c0 {
  display: inline-block;
  height: 0;
  width: 10px;
}

<body>
  <div>
    <div
      class="c0"
    />
  </div>
</body>
`;
